<resources>
    <string name="app_name">Home Care</string>
    <string name="i_want_to">I want to</string>
    <string name="hire_a_caretaker">HIRE A CARETAKER</string>
    <string name="offer_services">BE A CARETAKER</string>
    <string name="please_select_what_you_want">Please select what you want</string>
    <string name="logo">HomeCare</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_email_example_homecare_lk">Your email : example@homecare.lk</string>
    <string name="mobile_no_947x_xx_xx_xxx">Mobile No : +947X XX XX XXX</string>
    <string name="your_nic">Your NIC</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="register_as_a_caretaker_here">Register as a CareTaker here</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth_23_06_1987">Date of Birth : 23-06-1987</string>
    <string name="string_date_of_birth_23_06_1987" />
    <string name="home_care">home Care</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="requests">Requests</string>
    <string name="your_jobs">Your Jobs</string>
    <string name="sign_out">Sign out</string>
    <string name="description_max_280_characters">Description (Max 280 characters)</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="update_your_profile_to_publish">Update your profile to publish</string>
    <string name="contact_number">Contact Number</string>
    <string name="nic_number">NIC Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="user_name">User Name</string>
    <string-array name="gender">
        <item>- Gender -</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="Districts">
        <item>- District -</item>
        <item>Colombo</item>
        <item>Gampaha</item>
        <item>Kalutara</item>
        <item>Kandy</item>
        <item>Matale</item>
        <item>Nuwara Eliya</item>
        <item>Galle</item>
        <item>Matara</item>
        <item>Hambantota</item>
        <item>Jaffna</item>
        <item>Kilinochchi</item>
        <item>Mannar</item>
        <item>Vavuniya</item>
        <item>Mullaitivu</item>
        <item>Batticaloa</item>
        <item>Ampara</item>
        <item>Trincomalee</item>
        <item>Kurunegala</item>
        <item>Puttalam</item>
        <item>Anuradhapura</item>
        <item>Polonnaruwa</item>
        <item>Badulla</item>
        <item>Moneragala</item>
        <item>Ratnapura</item>
        <item>Kegalle</item>
    </string-array>
    <string-array name="typesofservices">
        <item>- Select the type of your service -</item>
        <item>Doctor</item>
        <item>Physio</item>
        <item>Nurse</item>
        <item>Care Taker</item>
        <item>Elder Care</item>
        <item>Post Natal Care</item>
    </string-array>
</resources>