<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeCaredashboardct"
    android:background="@drawable/homecarebg3">

    <Button
        android:id="@+id/btn_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="700dp"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/dbct_btnprofile"
        android:layout_width="150dp"
        android:layout_height="146dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="30dp"
        android:text="@string/profile"
        app:icon="@drawable/ic_baseline_perm_identity_24"
        app:iconGravity="textTop"
        app:iconPadding="5dp"
        app:iconSize="75dp"
        app:layout_constraintEnd_toStartOf="@+id/dbct_btnrequests"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/dbct_btnrequests"
        android:layout_width="150dp"
        android:layout_height="146dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="32dp"
        android:text="@string/requests"
        app:icon="@drawable/ic_baseline_message_24"
        app:iconGravity="textTop"
        app:iconPadding="10dp"
        app:iconSize="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/dbct_btnsettings"
        android:layout_width="150dp"
        android:layout_height="146dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_baseline_settings_24"
        app:iconGravity="textTop"
        app:iconSize="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dbct_btnrequests"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/dbct_btnyourjobs"
        android:layout_width="150dp"
        android:layout_height="146dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="30dp"
        android:text="@string/your_jobs"
        app:icon="@drawable/ic_baseline_assignment_turned_in_24"
        app:iconGravity="textTop"
        app:iconPadding="10dp"
        app:iconSize="75dp"
        app:layout_constraintEnd_toStartOf="@+id/dbct_btnsettings"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dbct_btnprofile"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>