<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lgrgbg"
        tools:context=".HomeCarerg">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/register_as_a_caretaker_here"
            android:textSize="24sp"
            android:theme="@style/Theme.HomeCare"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextfirstName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="46dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:theme="@style/Theme.HomeCare"
            app:layout_constraintEnd_toStartOf="@+id/editTextLastname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextLastname"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:theme="@style/Theme.HomeCare"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/your_email_example_homecare_lk"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:theme="@style/Theme.HomeCare"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextfirstName"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextPhoneno"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/mobile_no_947x_xx_xx_xxx"
            android:inputType="phone"
            android:minHeight="48dp"
            android:theme="@style/Theme.HomeCare"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextNic"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/your_nic"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:theme="@style/Theme.HomeCare"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhoneno"
            tools:ignore="TextContrastCheck" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="48dp"
            android:entries="@array/gender"
            android:minHeight="48dp"
            android:theme="@style/Theme.HomeCare"
            app:layout_constraintEnd_toStartOf="@+id/spinnerDistrict"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDob" />

        <Spinner
            android:id="@+id/spinnerDistrict"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="28dp"
            android:entries="@array/Districts"
            android:minHeight="48dp"
            android:theme="@style/Theme.HomeCare"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDob" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:theme="@style/Theme.HomeCare.btn2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textSize="20sp"
            android:theme="@style/Theme.HomeCare"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/log_in"
            android:theme="@style/Theme.HomeCare"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextDob"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/date_of_birth_23_06_1987"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_datepicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNic"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_datepicker"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:theme="@style/Theme.HomeCare.btn2"
            app:icon="@drawable/ic_baseline_calendar_today_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerrgtos"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextpassowrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"

            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerrgtos"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:entries="@array/typesofservices"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerGender" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>