<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/homecarebg3"
        android:theme="@style/Theme.HomeCare.btn2"
        tools:context=".HomeCarectprofile">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/home" />

        <Button
            android:id="@+id/ctprofile_btnuploadimg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="140dp"
            app:icon="@drawable/ic_baseline_photo_camera_24"
            app:iconGravity="top"
            app:iconPadding="0dp"
            app:iconSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctprofiletextview">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ctprofile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ctprofile_contactno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ctprofile_nicno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nic_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/ctprofile_gender"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="7dp"
            android:entries="@array/gender"
            app:layout_constraintEnd_toStartOf="@+id/ctprofile_district"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
            tools:ignore="TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/ctprofile_district"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:entries="@array/Districts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ctprofile_gender"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="7dp"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctprofile_gender">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ctprofile_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="40dp"
            android:layout_height="70dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="32dp"
            app:icon="@drawable/ic_baseline_calendar_today_24"
            app:iconGravity="textTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout7"
            app:layout_constraintTop_toBottomOf="@+id/ctprofile_district"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/ctprofile_tos"
            android:layout_width="348dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:entries="@array/typesofservices"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/ctprofile_description"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description_max_280_characters"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctprofile_tos"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/ctprofile_cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cancel"
            android:theme="@style/Theme.HomeCare"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ctprofile_update"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctprofile_description" />

        <Button
            android:id="@+id/ctprofile_update"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:text="@string/update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ctprofile_cancel"
            app:layout_constraintTop_toBottomOf="@+id/ctprofile_description" />

        <TextView
            android:id="@+id/ctprofiletextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/update_your_profile_to_publish"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctprofile_btnuploadimg" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>